# simple-timer-rs

./: Cargo.toml  README.md
src/: lib.rs
tests/: smoke.rs
